<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bezpieczna"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:padding="16dp">


    <ImageView
        android:id="@+id/polandEmblem"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="Herb Polski"
        android:src="@drawable/godlo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/polandFlag"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:contentDescription="Flaga Polski"
        android:src="@drawable/polish_flag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="Bezpieczna trasa"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/polandEmblem" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Moduł bezpieczna trasa działa na zasadzie udostępniania aktualnej lokalizacji twojego urządzenia. Wpisz numer telefonu twojego opiekuna i kliknij przycisk aktywuj, aby moduł zaczął działać."
        android:textSize="14sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/inputLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Wprowadź numer opiekuna"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <EditText
        android:id="@+id/phoneInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Kliknij tutaj aby wprowadzić numer."
        android:inputType="phone"
        android:background="@drawable/rounded_bg"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/inputLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/activateButton"
        android:layout_width="250dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/help_button"
        android:backgroundTint="#C00000"
        android:text="Aktywuj"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneInput" />
    <TextView
        android:id="@+id/activatedMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Twoja lokalizacja jest aktualnie przekazywana na podany numer."
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/activateButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <ImageButton
        android:id="@+id/backArrow"
        android:background="@android:color/transparent"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp" />

    <Switch
        android:id="@+id/bigText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:thumbTint="@color/switch_thumb"
        android:trackTint="@color/switch_track"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/eyeIcon"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <ImageView
        android:id="@+id/eyeIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/oko"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
